--- a/Morfis/MOFIS ERP/MOFIS ERP.csproj
+++ b/Morfis/MOFIS ERP/MOFIS ERP.csproj
@@ -95,7 +95,9 @@
     <Reference Include="SixLabors.Fonts, Version=1.0.0.0, Culture=neutral, PublicKeyToken=d998eea7b14cab13, processorArchitecture=MSIL">
       <HintPath>..\packages\SixLabors.Fonts.1.0.0\lib\netstandard2.0\SixLabors.Fonts.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
+    <Reference Include="System">
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.dll</HintPath>
+    </Reference>
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
@@ -170,6 +172,12 @@
     </Compile>
     <Compile Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\FormMenuCartasSolicitudes.Designer.cs">
       <DependentUpon>FormMenuCartasSolicitudes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\FormSolicitudPago.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\FormSolicitudPago.Designer.cs">
+      <DependentUpon>FormSolicitudPago.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Contabilidad\CuentasPorPagar\FormDashboardCuentasPorPagar.cs">
       <SubType>Form</SubType>
@@ -332,6 +340,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\FormMenuCartasSolicitudes.resx">
       <DependentUpon>FormMenuCartasSolicitudes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\FormSolicitudPago.resx">
+      <DependentUpon>FormSolicitudPago.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
