--- a/Morfis/MOFIS ERP/MOFIS ERP.csproj
+++ b/Morfis/MOFIS ERP/MOFIS ERP.csproj
@@ -471,10 +471,8 @@
     <Content Include="Database\03_Updates\UPDATE_003_AgregarPermisosNuevosRoles.sql" />
     <Content Include="Database\SCRIPT_MAESTRO_CXP.sql" />
     <Content Include="Resources\LOGOTIPO.png" />
+    <Content Include="Resources\LOGO.png" />
     <None Include="Resources\icon_Adv.png" />
-    <EmbeddedResource Include="Resources\MOFIS ERP -LOGO.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\QuestPDF.2025.12.1\build\net4\QuestPDF.targets" Condition="Exists('..\packages\QuestPDF.2025.12.1\build\net4\QuestPDF.targets')" />
