--- a/Morfis/MOFIS ERP/MOFIS ERP.csproj
+++ b/Morfis/MOFIS ERP/MOFIS ERP.csproj
@@ -185,11 +185,20 @@
     <Compile Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\Solicitud de pago\FormAgregarProveedor.Designer.cs">
       <DependentUpon>FormAgregarProveedor.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\Solicitud de pago\FormSolicitudPago.Comprobantes.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\Solicitud de pago\FormSolicitudPago.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\Solicitud de pago\FormSolicitudPago.Designer.cs">
       <DependentUpon>FormSolicitudPago.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\Solicitud de pago\ComprobanteItemControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\Solicitud de pago\ComprobanteItemControl.Designer.cs">
+      <DependentUpon>ComprobanteItemControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Contabilidad\CuentasPorPagar\FormDashboardCuentasPorPagar.cs">
       <SubType>Form</SubType>
