--- a/Mofis/MOFIS ERP/MOFIS ERP.csproj
+++ b/Mofis/MOFIS ERP/MOFIS ERP.csproj
@@ -185,6 +185,12 @@
     <Compile Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\Solicitud de pago\FormAgregarProveedor.Designer.cs">
       <DependentUpon>FormAgregarProveedor.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\Solicitud de pago\FormConfigOtrosImpuestos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\Solicitud de pago\FormConfigOtrosImpuestos.Designer.cs">
+      <DependentUpon>FormConfigOtrosImpuestos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\Solicitud de pago\FormInputSubtotal.Designer.cs">
       <DependentUpon>FormInputSubtotal.cs</DependentUpon>
     </Compile>
@@ -380,6 +386,9 @@
     <EmbeddedResource Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\Solicitud de pago\FormAgregarProveedor.resx">
       <DependentUpon>FormAgregarProveedor.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\Solicitud de pago\FormConfigOtrosImpuestos.resx">
+      <DependentUpon>FormConfigOtrosImpuestos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\Solicitud de pago\FormInputSubtotal.resx">
       <DependentUpon>FormInputSubtotal.cs</DependentUpon>
     </EmbeddedResource>
@@ -459,11 +468,23 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="bin\Debug\MOFIS ERP.exe.config" />
+    <None Include="bin\Debug\runtimes\linux-arm64\native\libqpdf.so" />
+    <None Include="bin\Debug\runtimes\linux-arm64\native\libQuestPdfSkia.so" />
+    <None Include="bin\Debug\runtimes\linux-musl-x64\native\libqpdf.so" />
+    <None Include="bin\Debug\runtimes\linux-musl-x64\native\libQuestPdfSkia.so" />
+    <None Include="bin\Debug\runtimes\linux-x64\native\libqpdf.so" />
+    <None Include="bin\Debug\runtimes\linux-x64\native\libQuestPdfSkia.so" />
+    <None Include="bin\Debug\runtimes\osx-arm64\native\libqpdf.dylib" />
+    <None Include="bin\Debug\runtimes\osx-arm64\native\libQuestPdfSkia.dylib" />
+    <None Include="bin\Debug\runtimes\osx-x64\native\libqpdf.dylib" />
+    <None Include="bin\Debug\runtimes\osx-x64\native\libQuestPdfSkia.dylib" />
     <None Include="CONTEXTO\PLAN_DESARROLLO_FormSolicitudPago.md" />
     <None Include="CONTEXTO\RESUMEN_IMPLEMENTACION_FormSolicitudPago.md" />
     <None Include="CONTEXTO\RESUMEN_IMPLEMENTACION_MOFIS_ERP.md" />
     <None Include="Database\README.md" />
     <None Include="Database\README_CXP.md" />
+    <None Include="Docs\PROJECT_CONTEXT.md" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -481,6 +502,81 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="bin\Debug\BCrypt.Net-Next.dll" />
+    <Content Include="bin\Debug\BCrypt.Net-Next.xml" />
+    <Content Include="bin\Debug\BouncyCastle.Cryptography.dll" />
+    <Content Include="bin\Debug\BouncyCastle.Cryptography.xml" />
+    <Content Include="bin\Debug\ClosedXML.dll" />
+    <Content Include="bin\Debug\ClosedXML.Parser.dll" />
+    <Content Include="bin\Debug\ClosedXML.Parser.xml" />
+    <Content Include="bin\Debug\ClosedXML.pdb" />
+    <Content Include="bin\Debug\ClosedXML.xml" />
+    <Content Include="bin\Debug\DocumentFormat.OpenXml.dll" />
+    <Content Include="bin\Debug\DocumentFormat.OpenXml.Framework.dll" />
+    <Content Include="bin\Debug\DocumentFormat.OpenXml.Framework.xml" />
+    <Content Include="bin\Debug\DocumentFormat.OpenXml.xml" />
+    <Content Include="bin\Debug\ExcelNumberFormat.dll" />
+    <Content Include="bin\Debug\ExcelNumberFormat.xml" />
+    <Content Include="bin\Debug\itextsharp.dll" />
+    <Content Include="bin\Debug\itextsharp.xml" />
+    <Content Include="bin\Debug\Microsoft.Bcl.AsyncInterfaces.dll" />
+    <Content Include="bin\Debug\Microsoft.Bcl.AsyncInterfaces.xml" />
+    <Content Include="bin\Debug\Microsoft.Bcl.HashCode.dll" />
+    <Content Include="bin\Debug\Microsoft.Bcl.HashCode.xml" />
+    <Content Include="bin\Debug\Microsoft.Extensions.DependencyInjection.Abstractions.dll" />
+    <Content Include="bin\Debug\Microsoft.Extensions.DependencyInjection.Abstractions.xml" />
+    <Content Include="bin\Debug\Microsoft.Extensions.DependencyInjection.dll" />
+    <Content Include="bin\Debug\Microsoft.Extensions.DependencyInjection.xml" />
+    <Content Include="bin\Debug\Microsoft.Extensions.Logging.Abstractions.dll" />
+    <Content Include="bin\Debug\Microsoft.Extensions.Logging.Abstractions.xml" />
+    <Content Include="bin\Debug\Microsoft.Extensions.Logging.dll" />
+    <Content Include="bin\Debug\Microsoft.Extensions.Logging.xml" />
+    <Content Include="bin\Debug\Microsoft.Extensions.Options.dll" />
+    <Content Include="bin\Debug\Microsoft.Extensions.Options.xml" />
+    <Content Include="bin\Debug\Microsoft.Extensions.Primitives.dll" />
+    <Content Include="bin\Debug\Microsoft.Extensions.Primitives.xml" />
+    <Content Include="bin\Debug\MOFIS ERP.exe" />
+    <Content Include="bin\Debug\MOFIS ERP.pdb" />
+    <Content Include="bin\Debug\Newtonsoft.Json.dll" />
+    <Content Include="bin\Debug\Newtonsoft.Json.xml" />
+    <Content Include="bin\Debug\QuestPDF.dll" />
+    <Content Include="bin\Debug\QuestPDF.xml" />
+    <Content Include="bin\Debug\RBush.dll" />
+    <Content Include="bin\Debug\RBush.xml" />
+    <Content Include="bin\Debug\runtimes\win-x64\native\libgcc_s_seh-1.dll" />
+    <Content Include="bin\Debug\runtimes\win-x64\native\libstdc++-6.dll" />
+    <Content Include="bin\Debug\runtimes\win-x64\native\libwinpthread-1.dll" />
+    <Content Include="bin\Debug\runtimes\win-x64\native\qpdf.dll" />
+    <Content Include="bin\Debug\runtimes\win-x64\native\QuestPdfSkia.dll" />
+    <Content Include="bin\Debug\runtimes\win-x64\native\zlib1.dll" />
+    <Content Include="bin\Debug\runtimes\win-x86\native\libgcc_s_dw2-1.dll" />
+    <Content Include="bin\Debug\runtimes\win-x86\native\libstdc++-6.dll" />
+    <Content Include="bin\Debug\runtimes\win-x86\native\libwinpthread-1.dll" />
+    <Content Include="bin\Debug\runtimes\win-x86\native\qpdf.dll" />
+    <Content Include="bin\Debug\runtimes\win-x86\native\QuestPdfSkia.dll" />
+    <Content Include="bin\Debug\runtimes\win-x86\native\zlib1.dll" />
+    <Content Include="bin\Debug\SixLabors.Fonts.dll" />
+    <Content Include="bin\Debug\SixLabors.Fonts.xml" />
+    <Content Include="bin\Debug\System.Buffers.dll" />
+    <Content Include="bin\Debug\System.Buffers.xml" />
+    <Content Include="bin\Debug\System.Diagnostics.DiagnosticSource.dll" />
+    <Content Include="bin\Debug\System.Diagnostics.DiagnosticSource.xml" />
+    <Content Include="bin\Debug\System.Memory.dll" />
+    <Content Include="bin\Debug\System.Memory.xml" />
+    <Content Include="bin\Debug\System.Numerics.Vectors.dll" />
+    <Content Include="bin\Debug\System.Numerics.Vectors.xml" />
+    <Content Include="bin\Debug\System.Runtime.CompilerServices.Unsafe.dll" />
+    <Content Include="bin\Debug\System.Runtime.CompilerServices.Unsafe.xml" />
+    <Content Include="bin\Debug\System.Security.AccessControl.dll" />
+    <Content Include="bin\Debug\System.Security.AccessControl.xml" />
+    <Content Include="bin\Debug\System.Security.Cryptography.Xml.dll" />
+    <Content Include="bin\Debug\System.Security.Cryptography.Xml.xml" />
+    <Content Include="bin\Debug\System.Security.Principal.Windows.dll" />
+    <Content Include="bin\Debug\System.Security.Principal.Windows.xml" />
+    <Content Include="bin\Debug\System.Threading.Tasks.Extensions.dll" />
+    <Content Include="bin\Debug\System.Threading.Tasks.Extensions.xml" />
+    <Content Include="bin\Debug\System.ValueTuple.dll" />
+    <Content Include="bin\Debug\System.ValueTuple.xml" />
     <Content Include="CONTEXTO\ANÁLISIS INFORMAR - MÓDULO SOLICITUD DE PAGO.txt" />
     <Content Include="Database\01_Schema\01_CreateDatabase.sql" />
     <Content Include="Database\01_Schema\SCRIPT_06_CrearTablaCatalogoCategorias.sql" />
