--- a/Mofis/MOFIS ERP/MOFIS ERP.csproj
+++ b/Mofis/MOFIS ERP/MOFIS ERP.csproj
@@ -202,7 +202,9 @@
     <Compile Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\Solicitud de pago\FormInputSubtotal.Designer.cs">
       <DependentUpon>FormInputSubtotal.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\Solicitud de pago\FormMetodoConversion.cs" />
+    <Compile Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\Solicitud de pago\FormMetodoConversion.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\Solicitud de pago\FormMetodoConversion.Designer.cs">
       <DependentUpon>FormMetodoConversion.cs</DependentUpon>
     </Compile>
@@ -413,6 +415,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\Solicitud de pago\FormInputSubtotal.resx">
       <DependentUpon>FormInputSubtotal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\Solicitud de pago\FormMetodoConversion.resx">
+      <DependentUpon>FormMetodoConversion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Contabilidad\CuentasPorPagar\CartasSolicitudes\Solicitud de pago\FormSolicitudPago.resx">
       <DependentUpon>FormSolicitudPago.cs</DependentUpon>
